// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders 1`] = `
<div
  className="normal"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <h1>
    test App
  </h1>
</div>
`;

exports[`App component renders 2`] = `
<div
  className="hovered"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <h1>
    test App
  </h1>
</div>
`;

exports[`App component renders 3`] = `
<div
  className="normal"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <h1>
    test App
  </h1>
</div>
`;
